# ectf-2026-saddleback

./: .gitignore  Makefile  README.md
ectf26_design/: pyproject.toml
ectf26_design/src/: gen_secrets.py
ectf26_design/src/ectf26_design.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
firmware/: Dockerfile  Makefile  build.sh  firmware.ld  secrets_to_c_header.py
firmware/inc/: commands.h  filesystem.h  host_messaging.h  security.h  simple_crypto.h  simple_flash.h  simple_uart.h  status_led.h  ti_msp_dl_config.h
firmware/src/: HSM.c  commands.c  filesystem.c  host_messaging.c  security.c  simple_crypto.c  simple_flash.c  simple_uart.c  startup_mspm0l222x_ticlang.c  ti_msp_dl_config.c
